--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,11 +50,11 @@ spring:
     console:
       enabled: true
       path: /h2-console
-  sql:
-    init:
-      mode: always
-      schema-locations: classpath:db/schema.sql
-      data-locations: classpath:db/data.sql
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+    baseline-version: 0
   data:
     redis:
       host: localhost
@@ -71,11 +71,12 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 123456
-  sql:
-    init:
-      mode: always
-      schema-locations: classpath:db/schema-mysql.sql
-      data-locations: classpath:db/data.sql
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+    baseline-version: 0
+    clean-disabled: true
   data:
     redis:
       host: localhost
